--- a/TouristGuide/Content/Site.css
+++ b/TouristGuide/Content/Site.css
@@ -714,6 +714,19 @@ text-align:center;
 font-family:Segoe WP Semibold;
 }
 
+.regionResults
+{
+ margin:auto;
+ margin-bottom:10px;
+ font-size:16px;
+ color:gray;
+ padding:10px;   
+ background-image: url(images/countryGreen.png);
+-moz-border-radius: 20px;
+border-radius: 20px;
+text-align:center;
+font-family:Segoe WP Semibold;
+}
 
 #logInTile
 {
@@ -773,8 +786,8 @@ text-align:center;
     background-position:center;
     background-image:url('/Content/images/grayGreenBg.png');
      -moz-border-radius: 20px;
-border-radius: 20px;
-padding:20px;
+    border-radius: 20px;
+    padding:20px;
 }
 
 @font-face
@@ -805,3 +818,4 @@ padding:20px;
 {
     display: none;
 }
+
