--- a/TouristGuide/Views/Attraction/Details.cshtml
+++ b/TouristGuide/Views/Attraction/Details.cshtml
@@ -10,6 +10,7 @@
         $("#showreview").click(function () {
             $("#addreview").toggle();
         });
+        GetMap();
     });
 
     function AddReview() {
@@ -39,6 +40,24 @@
         }
     }
 </script>
+<script type="text/javascript">
+    var map = null;
+
+    function GetMap() {
+        map = new VEMap('myMap');
+
+        var latitude = @Model.Coordinates.Latitude;
+        var longitude = @Model.Coordinates.Longitude;
+        
+        map.LoadMap(new VELatLong(latitude, longitude),
+                10, VEMapStyle.Road, false);
+        map.HideScalebar();
+        
+        var shape = new VEShape(VEShapeType.Pushpin, new VELatLong(latitude, longitude)); 
+        map.AddShape(shape);        
+        
+    }
+</script>
 
 @Html.Partial("Partial/ShowMore")
 
@@ -66,7 +85,7 @@
 			@Html.ActionLink("Go back to attractions' index", "Index")
 		</p>
  }
-
+ <div id="myMap" style="position: relative; width: 300px; height: 300px;"></div>
 	<p>@Html.Raw(Model.Description)</p>   
 <div class="post-address">
 <ul>
