--- a/TouristGuide/Views/Place/Details.cshtml
+++ b/TouristGuide/Views/Place/Details.cshtml
@@ -1,13 +1,38 @@
 ﻿@model TouristGuide.Models.Place
-
 @{
     ViewBag.Title = Model.Name;
 }
+<script type="text/javascript" src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.2"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        GetMap();
+        //call the action created to retrieve the data
+        $.post("/Place/AttractionsForPlace?place=@Model.Name", null, function (data) {
+            //iterate through the 'data' retireved
+            $.each(data, function (item, location) {
+                AddLocationPin(location.Latitude, location.Longitude, location.Title, location.Description);
+            });
+        });
+    });
+    var map = null;
+    function GetMap() {
+        map = new VEMap('myMap');
+        map.LoadMap(new VELatLong(@Model.Coordinates.Latitude, @Model.Coordinates.Longitude), 10, 'Road', false);
+    }
+    function AddLocationPin(latitude, longitude, title, description) {      
+        //create new pushpin shape      
+        shape = new VEShape(VEShapeType.Pushpin, new VELatLong(latitude, longitude));      
+        //set title for info box      
+        shape.SetTitle(title);      
+        //set html for info box      
+        shape.SetDescription(description);      
+        //add pin      
+        map.AddShape(shape);  
+    }
 
-Country: @Html.ActionLink(Model.Country.Name, "Details", "Country", new { id = Model.Country.ID}, null)<br />
-@Html.ActionLink("Show Attractions", "Index", "Attraction", new { place = Model.Name },null)
-
-
+</script>
+Country: @Html.ActionLink(Model.Country.Name, "Details", "Country", new { id = Model.Country.ID }, null)<br />
+@Html.ActionLink("Show Attractions", "Index", "Attraction", new { place = Model.Name }, null)
 @if (Request.IsAuthenticated && HttpContext.Current.User.IsInRole("admin"))
 {
     <p>
@@ -16,8 +41,6 @@ Country: @Html.ActionLink(Model.Country.Name, "Details", "Country", new { id = M
         @Html.ActionLink("Back to List", "Index")
     </p>
 }
-
-
+<div id='myMap' style="position: relative; width: 400px; height: 400px; margin: 20px">
+</div>
 <p>@Html.Raw(Model.Description)</p>
-
-
